--- a/production/page-schedule.html
+++ b/production/page-schedule.html
@@ -10,190 +10,131 @@
 	<body>
 		<div class="wrapper">
 			<!--include ../header/header-->
-			<ul class="navigation container">
-				<li class="navigation__item">
-					<buton class="navigation__btn active-state" type="button" data-class="state-0-all">State 1</buton>
+			<menu class="navigation container" type="list">
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn active-state" type="button" data-class="state-0-all" role="tab" aria-label="State of page 1">State 1</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-0-all-link">State 2</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-0-all-link" role="tab" aria-label="State of page 2">State 2</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-1-three">State 3</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-1-three" role="tab" aria-label="State of page 3">State 3</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-2">State 4</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-2" role="tab" aria-label="State of page 4">State 4</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-3-without-subt">State 5</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-3-without-subt" role="tab" aria-label="State of page 5">State 5</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-4-one-btn">State 6</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-4-one-btn" role="tab" aria-label="State of page 6">State 6</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-5-without-btn">State 7</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-5-without-btn" role="tab" aria-label="State of page 7">State 7</button>
 				</li>
-				<li class="navigation__item">
-					<buton class="navigation__btn" type="button" data-class="state-6-without-btn-subt">State 8</buton>
+				<li class="navigation__item" role="menuitem">
+					<button class="navigation__btn" type="button" data-class="state-6-without-btn-subt" role="tab" aria-label="State of page 8">State 8</button>
 				</li>
-			</ul>
+			</menu>
 			<div class="page-schedule schedule container state-0-all">
-				<header class="schedule__header header">
-					<h1 class="header__title Block-title">Schedule</h1><sub class="header__subtitle Subtitle">Apart from working on effective products for businesses, our specialists organize educational programs for business owners and managers.</sub>
+				<header class="schedule__header header" role="presentation">
+					<h1 class="header__title Block-title" role="presentation">Schedule</h1>
+					<h3 class="header__subtitle Subtitle" role="presentation">Apart from working on effective products for businesses, our specialists organize educational programs for business owners and managers.</h3>
 				</header>
-				<section class="schedule__section section">
-					<div class="section__heading heading">
-						<div class="heading__item Heading-large">Date</div>
-						<div class="heading__item Heading-large">Time</div>
-						<div class="heading__item Heading-large">Class</div>
-						<div class="heading__item Heading-large coach">Coach</div>
-						<div class="heading__item Heading-large level">Level</div>
-					</div>
-					<article class="section__body body">
-						<div class="body__item">
-							<div class="body__day Heading">Monday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+				<main class="schedule__main main">
+					<header class="main__header" role="presentation">
+						<ul class="main__heading heading" role="directory">
+							<li class="heading__item Heading-large" role="presentation" aria-label="Day of educational program">Date</li>
+							<li class="heading__item Heading-large" role="presentation" aria-label="Time of educational program">Time</li>
+							<li class="heading__item Heading-large" role="presentation" aria-label="Class of educational program">Class</li>
+							<li class="heading__item Heading-large coach" role="presentation" aria-label="Coach of educational program">Coach</li>
+							<li class="heading__item Heading-large level" role="presentation" aria-label="Level of educational program">Level</li>
+						</ul>
+					</header>
+					<section class="main__section section" role="main">
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Monday">Monday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Workshop</div>
-									<div class="desc__coach coach">Lucille Wright</div>
-									<div class="desc__level level">Beginners</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Beginners</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">7:45 pm - 8:45 pm</div>
-									<div class="desc__class">Seminar</div>
-									<div class="desc__coach coach">Lucille Wright</div>
-									<div class="desc__level level">Experienced</div>
+									<time class="desc__times" aria-label="Time of the program">7:45 pm - 8:45 pm</time><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span>
 								</div>
 							</div>
-						</div>
-						<div class="body__item">
-							<div class="body__day Heading">Tuesday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+						</article>
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Tuesday">Tuesday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Workshop</div>
-									<div class="desc__coach coach">Keith Conner</div>
-									<div class="desc__level level">Beginners</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">7:45 pm - 8:45 pm</div>
-									<div class="desc__class">Q&amp;A</div>
-									<div class="desc__coach coach">Ada Elliott</div>
-									<div class="desc__level level">All levels</div>
+									<time class="desc__times" aria-label="Time of the program">7:45 pm - 8:45 pm</time><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">9:00 pm - 10:00 pm</div>
-									<div class="desc__class">Q&amp;A</div>
-									<div class="desc__coach coach">Vernon Carlson</div>
-									<div class="desc__level level">Experienced</div>
+									<time class="desc__times" aria-label="Time of the program">9:00 pm - 10:00 pm</time><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span>
 								</div>
 							</div>
-						</div>
-						<div class="body__item">
-							<div class="body__day Heading">Wednesday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+						</article>
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Wednesday">Wednesday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Workshop</div>
-									<div class="desc__coach coach">Lucille Wright</div>
-									<div class="desc__level level">Experienced</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span>
 								</div>
 							</div>
-						</div>
-						<div class="body__item">
-							<div class="body__day Heading">Thursday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+						</article>
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Thursday">Thursday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Workshop</div>
-									<div class="desc__coach coach">Lucille Wright</div>
-									<div class="desc__level level">Beginners</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Beginners</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">7:45 pm - 8:45 pm</div>
-									<div class="desc__class">Seminar</div>
-									<div class="desc__coach coach">Lucille Wright</div>
-									<div class="desc__level level">Experienced</div>
+									<time class="desc__times" aria-label="Time of the program">7:45 pm - 8:45 pm</time><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span>
 								</div>
 							</div>
-						</div>
-						<div class="body__item">
-							<div class="body__day Heading">Friday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+						</article>
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Friday">Friday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Workshop</div>
-									<div class="desc__coach coach">Keith Conner</div>
-									<div class="desc__level level">Beginners</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">7:45 pm - 8:45 pm</div>
-									<div class="desc__class">Q&amp;A</div>
-									<div class="desc__coach coach">Ada Elliott</div>
-									<div class="desc__level level">All levels</div>
+									<time class="desc__times" aria-label="Time of the program">7:45 pm - 8:45 pm</time><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">9:00 pm - 10:00 pm</div>
-									<div class="desc__class">Q&amp;A</div>
-									<div class="desc__coach coach">Vernon Carlson</div>
-									<div class="desc__level level">Experienced</div>
+									<time class="desc__times" aria-label="Time of the program">9:00 pm - 10:00 pm</time><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span>
 								</div>
 							</div>
-						</div>
-						<div class="body__item">
-							<div class="body__day Heading">Saturday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+						</article>
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Saturday">Saturday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Workshop</div>
-									<div class="desc__coach coach">Keith Conner</div>
-									<div class="desc__level level">Beginners</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">7:45 pm - 8:45 pm</div>
-									<div class="desc__class">Q&amp;A</div>
-									<div class="desc__coach coach">Ada Elliott</div>
-									<div class="desc__level level">All levels</div>
+									<time class="desc__times" aria-label="Time of the program">7:45 pm - 8:45 pm</time><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span>
 								</div>
 								<div class="desc__item">
-									<div class="desc__times">9:00 pm - 10:00 pm</div>
-									<div class="desc__class">Q&amp;A</div>
-									<div class="desc__coach coach">Vernon Carlson</div>
-									<div class="desc__level level">Experienced</div>
+									<time class="desc__times" aria-label="Time of the program">9:00 pm - 10:00 pm</time><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span>
 								</div>
 							</div>
-						</div>
-						<div class="body__item">
-							<div class="body__day Heading">Sunday
-								<div class="arrow-down"></div>
-							</div>
-							<div class="body__desc desc">
+						</article>
+						<article class="section__item" role="main">
+							<h2 class="section__day Heading" role="presentation" aria-label="Sunday">Sunday<i class="arrow-down"></i></h2>
+							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item">
-									<div class="desc__times">6:30 pm - 7:30 pm</div>
-									<div class="desc__class">Seminar</div>
-									<div class="desc__coach coach">Keith Conner</div>
-									<div class="desc__level level">All levels</div>
+									<time class="desc__times" aria-label="Time of the program">6:30 pm - 7:30 pm</time><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">All levels</span>
 								</div>
 							</div>
-						</div>
-						<footer class="section__footer footer">
-							<button class="footer__btn-download Medium-button-secondary" type="button">Download a schedule</button>
-							<button class="footer__btn-book Medium-button-primary" type="button">Book a class</button>
-						</footer>
-					</article>
-				</section>
+						</article>
+					</section>
+				</main>
+				<footer class="main__footer footer" role="group"><a class="footer__btn-download Medium-button-secondary" href="#" role="link" aria-label="Download a schedule" download>Download a schedule</a><a class="footer__btn-book Medium-button-primary" href="#" role="link" aria-label="Book a class">Book a class</a></footer>
 			</div>
 			<!--include ../footer/footer-->
 		</div>
