add production with types

--- a/production/page-schedule.html
+++ b/production/page-schedule.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="wrapper">
 			<!--include ../header/header-->
-			<menu class="navigation container" type="toolbar" role="menu">
+			<menu class="navigation container">
 				<li class="navigation__item" role="menuitem">
 					<button class="navigation__btn active-state" type="button" data-class="state-0-all" aria-label="State of page 1">State 1</button>
 				</li>
@@ -51,88 +51,88 @@
 							<li class="heading__item Heading-large level" role="presentation" aria-label="Level of educational program">Level</li>
 						</ul>
 					</header>
-					<article class="main__section section" role="main">
+					<section class="main__section section" role="main">
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Monday">Monday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">7:45</time>&nbsp;pm -
-										<time class="desc__time">8:45</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
+										<output class="desc__time">7:45</output>&nbsp;pm -
+										<output class="desc__time">8:45</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
 							</div>
 						</article>
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Tuesday">Tuesday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">7:45</time>&nbsp;pm -
-										<time class="desc__time">8:45</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
+										<output class="desc__time">7:45</output>&nbsp;pm -
+										<output class="desc__time">8:45</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">9:00</time>&nbsp;pm -
-										<time class="desc__time">10:00</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
+										<output class="desc__time">9:00</output>&nbsp;pm -
+										<output class="desc__time">10:00</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
 							</div>
 						</article>
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Wednesday">Wednesday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
 							</div>
 						</article>
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Thursday">Thursday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">7:45</time>&nbsp;pm -
-										<time class="desc__time">8:45</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
+										<output class="desc__time">7:45</output>&nbsp;pm -
+										<output class="desc__time">8:45</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Lucille Wright</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
 							</div>
 						</article>
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Friday">Friday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">7:45</time>&nbsp;pm -
-										<time class="desc__time">8:45</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
+										<output class="desc__time">7:45</output>&nbsp;pm -
+										<output class="desc__time">8:45</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">9:00</time>&nbsp;pm -
-										<time class="desc__time">10:00</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
+										<output class="desc__time">9:00</output>&nbsp;pm -
+										<output class="desc__time">10:00</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
 							</div>
 						</article>
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Saturday">Saturday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Workshop</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">Beginners</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">7:45</time>&nbsp;pm -
-										<time class="desc__time">8:45</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
+										<output class="desc__time">7:45</output>&nbsp;pm -
+										<output class="desc__time">8:45</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Ada Elliott</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">9:00</time>&nbsp;pm -
-										<time class="desc__time">10:00</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
+										<output class="desc__time">9:00</output>&nbsp;pm -
+										<output class="desc__time">10:00</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Q&amp;A</span><span class="desc__coach coach" aria-label="Coach of the program">Vernon Carlson</span><span class="desc__level level" aria-label="Level of the program">Experienced</span></div>
 							</div>
 						</article>
 						<article class="section__item" role="main">
 							<h2 class="section__day Heading" role="presentation" aria-label="Sunday">Sunday<i class="arrow-down"></i></h2>
 							<div class="section__desc desc" role="contentinfo">
 								<div class="desc__item"><span class="desc__times" aria-label="Time of the program">
-										<time class="desc__time">6:30</time>&nbsp;pm -
-										<time class="desc__time">7:30</time>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
+										<output class="desc__time">6:30</output>&nbsp;pm -
+										<output class="desc__time">7:30</output>&nbsp;pm</span><span class="desc__class" aria-label="Class of the program">Seminar</span><span class="desc__coach coach" aria-label="Coach of the program">Keith Conner</span><span class="desc__level level" aria-label="Level of the program">All levels</span></div>
 							</div>
 						</article>
-					</article>
+					</section>
 				</main>
 				<footer class="main__footer footer" role="group"><a class="footer__btn-download Medium-button-secondary" href="#" aria-label="Download a schedule" download>Download a schedule</a><a class="footer__btn-book Medium-button-primary" href="#" aria-label="Book a class">Book a class</a></footer>
 			</div>
