change menu on ul

--- a/production/page-schedule.html
+++ b/production/page-schedule.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="wrapper">
 			<!--include ../header/header-->
-			<menu class="navigation container">
+			<ul class="navigation container" role="menu">
 				<li class="navigation__item" role="menuitem">
 					<button class="navigation__btn active-state" type="button" data-class="state-0-all" aria-label="State of page 1">State 1</button>
 				</li>
@@ -35,7 +35,7 @@
 				<li class="navigation__item" role="menuitem">
 					<button class="navigation__btn" type="button" data-class="state-6-without-btn-subt" aria-label="State of page 8">State 8</button>
 				</li>
-			</menu>
+			</ul>
 			<div class="page-schedule schedule container state-0-all">
 				<header class="schedule__header header" role="presentation">
 					<h1 class="header__title Block-title" role="presentation">Schedule</h1>
